fix system dark mode

--- a/src/assets/scss/background.scss
+++ b/src/assets/scss/background.scss
@@ -6,4 +6,8 @@
   .has-background-light {
     background-color: #131313 !important;
   }
+
+  .has-background-white {
+    background-color: #1c1c1c !important;
+  }
 }
