--- a/src/assets/scss/navbar.scss
+++ b/src/assets/scss/navbar.scss
@@ -6,4 +6,14 @@
   .navbar.is-light {
     background: #2c2e30;
   }
+
+  .navbar.is-light .navbar-brand > a.navbar-item:hover,
+  .navbar.is-light .navbar-brand > a.navbar-item.is-active {
+    background-color: rgba(11, 11, 11, 0.7);
+  }
+
+  .navbar.is-light .navbar-start > a.navbar-item.is-active {
+    background-color: rgba(11, 11, 11, 0.7);
+    color: #e8e8e8;
+  }
 }
