--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -18,4 +18,12 @@
   .title {
     color: #9f9f9f;
   }
+
+  .subtitle {
+    color: #b0b0b0;
+  }
+
+  strong {
+    color: #aeaeae;
+  }
 }
